Correction made to horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ html{
 body{
     margin: 0;
     background: linear-gradient(#3f474e, #38fedc, #3f474e);
+    overflow-x: hidden;
 }
 
 header{
